<resources>
    <string name="app_name">NewsApp</string>
    <string name="article_title">title</string>
    <string name="article_description">description</string>
    <string name="article_section">section</string>
    <string name="article_author">author</string>
    <string name="article_date">date</string>
    <string name="no_news">No news</string>
    <string name="no_internet">No internet</string>
    <string name="api_key">api-key</string>
    <string name="from_date">from-date</string>
    <string name="page_size">page-size</string>
    <string name="show_fields">show-fields</string>
    <string name="show_tags">show-tags</string>
    <string name="response">response</string>
    <string name="results">results</string>
    <string name="sectionName">sectionName</string>
    <string name="webPublicationDate">webPublicationDate</string>
    <string name="webTitle">webTitle</string>
    <string name="tags">tags</string>
    <string name="trailText">trailText</string>
    <string name="fields">fields</string>
    <string name="webUrl">webUrl</string>
    <string name="utf8">UTF-8</string>
    <string name="error_response_code">Error response code:</string>
    <string name="problem_occurred">Problem Occurred.</string>
    <string name="method_get">GET</string>
    <string name="api_key_val">test</string>
    <string name="from_date_val">"2018-01-01"</string>
    <string name="page_size_val">15</string>
    <string name="show_fields_val">trailText</string>
    <string name="show_tags_val">contributor</string>
    <string name="gardien_url_base">https://content.guardianapis.com/search?</string>
    <string name="utils_tag">utils_tag</string>
    <string name="settings_title">Settings</string>
    <string name="settings_topic_default" translatable="false">Business</string>

    <string name="settings_topic_label">Show articles from : </string>
    <string name="settings_topic_key" translatable="false">topic</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <string name="settings_order_by_relevance_label">relevance </string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

    <string name="settings_order_by_least_recent_label">Least Recent</string>
    <string name="settings_order_by_least_recent_value" translatable="false">oldest</string>
    <string name="query_order_by">order-by</string>
    <string name="query_topic">q</string>
    <string name="settings_menu_item">Settings</string>

</resources>
